--- a/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - argocd/ingress.yaml
   # - namespace/ingress-nginx.yaml
   # - app/ingress-nginx.yaml
