--- a/gitops/control-center/overlay/lab-dev-th/argocd/ingress.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/argocd/ingress.yaml
@@ -4,9 +4,7 @@ metadata:
   name: argocd-server-ingress
   namespace: argocd
   annotations:
-    # these annotations enable SSL termination at the ingress controller
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: nginx
@@ -20,4 +18,4 @@ spec:
           service:
             name: argocd-server
             port:
-              name: https # Connects to port 443 on the service
+              name: http
