--- a/gitops/control-center/base/kustomization.yaml
+++ b/gitops/control-center/base/kustomization.yaml
@@ -1,5 +1,22 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - namespace/ingress-nginx.yaml
   - app/ingress-nginx.yaml
+  - namespace/postgres.yaml
+
+configMapGenerator:
+- name: postgres-config
+  literals:
+    - "POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
+  namespace: postgres
+
+secretGenerator:
+- name: postgres-credentials
+  literals:
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=postgres
+    - POSTGRES_DB=messages
+  namespace: postgres
+
+generatorOptions:
+  disableNameSuffixHash: true
