--- a/gitops/control-center/base/namespace/postgres.yaml
+++ b/gitops/control-center/base/namespace/postgres.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    kubernetes.io/metadata.name: ingress-nginx
+    kubernetes.io/metadata.name: postgres
   annotations:
     argocd.argoproj.io/sync-options: "Prune=false,Delete=false"
-  name: ingress-nginx
+  name: postgres
 spec:
   finalizers:
   - kubernetes
