--- a/gitops/control-center/overlay/lab-dev-th/postgres/postgres.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/postgres/postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: infrastructure
+  namespace: postgres
   labels:
     service: database
 spec:
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: infrastructure
+  namespace: postgres
   labels:
     service: database
     description: "PostgreSQL database for message persistence"
