--- a/gitops/control-center/base/kustomization.yaml
+++ b/gitops/control-center/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - app/ingress-nginx.yaml
+  - app/strimzi-operator.yaml
   - namespace/postgres.yaml
 
 configMapGenerator:
