--- a/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - ../../base
   - argocd/ingress.yaml
   - postgres/postgres.yaml
-  - kafka/kafka-cluster.yaml
-  - kafka/topics.yaml
+  # - kafka/kafka-cluster.yaml
+  # - kafka/topics.yaml
