--- a/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: kafka
   annotations:
     strimzi.io/node-pools: "enabled"
+    strimzi.io/kraft: "enabled"
 spec:
   kafka:
     version: 4.1.1
