--- a/gitops/control-center/base/namespace/frontend.yaml
+++ b/gitops/control-center/base/namespace/frontend.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    kubernetes.io/metadata.name: kafka
+    kubernetes.io/metadata.name: frontend
   annotations:
     argocd.argoproj.io/sync-options: "Prune=false,Delete=false"
-  name: kafka
+  name: frontend
 spec:
   finalizers:
   - kubernetes
