--- a/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
@@ -7,3 +7,7 @@ resources:
   - kafka/kafka-nodepool.yaml
   - kafka/kafka-cluster.yaml
   - kafka/topics.yaml
+  - app/backend
+  - app/frontend
+  - app/consumer
+  - app/init-job.yaml
