--- a/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base
   - argocd/ingress.yaml
   - postgres/postgres.yaml
+  - postgres/pgadmin.yaml
   - kafka/kafka-nodepool.yaml
   - kafka/kafka-cluster.yaml
   - kafka/topics.yaml
