move init-job to consumer namespace

--- a/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: app-init
+  namespace: consumer
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
