--- a/gitops/control-center/overlay/lab-dev-th/app/consumer/kustomization.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/consumer/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: consumer
 resources:
   - deployment.yaml
+  - init-job.yaml
 
 configMapGenerator:
 - name: app-config
