--- a/gitops/control-center/overlay/lab-dev-th/postgres/pgadmin.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/postgres/pgadmin.yaml
@@ -22,7 +22,7 @@ spec:
           image: dpage/pgadmin4:latest
           env:
             - name: PGADMIN_DEFAULT_EMAIL
-              value: "admin@dso-exam-01.local"
+              value: "admin@admin.com"
             - name: PGADMIN_DEFAULT_PASSWORD
               value: "admin"
             - name: PGADMIN_CONFIG_SERVER_MODE
