--- a/gitops/control-center/overlay/lab-dev-th/app/consumer/deployment.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/consumer/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: consumer
   labels:
     app: consumer
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   replicas: 1
   selector:
