--- a/gitops/control-center/overlay/lab-dev-th/argocd/ingress.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/argocd/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    argocd.argoproj.io/sync-wave: "-10"
 spec:
   ingressClassName: nginx
   rules:
