--- a/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     strimzi.io/node-pools: "enabled"
     strimzi.io/kraft: "enabled"
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   kafka:
     version: 4.1.1
