--- a/gitops/control-center/overlay/lab-dev-th/app/backend/deployment.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/backend/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: backend
   labels:
     app: backend
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   replicas: 2
   selector:
