--- a/gitops/control-center/overlay/lab-dev-th/app/backend/service.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/backend/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: backend
   namespace: backend
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   selector:
     app: backend
