--- a/gitops/control-center/overlay/lab-dev-th/app/frontend/deployment.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/frontend/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: frontend
   labels:
     app: frontend
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   replicas: 1
   selector:
