--- a/gitops/control-center/overlay/lab-dev-th/app/frontend/service.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/frontend/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: frontend
   namespace: frontend
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   selector:
     app: frontend
