--- a/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: kafka
   labels:
     strimzi.io/cluster: kafka-cluster
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   partitions: 3
   replicas: 1
