--- a/gitops/control-center/overlay/lab-dev-th/postgres/postgres.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/postgres/postgres.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: postgres
   labels:
     service: database
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
@@ -18,6 +20,8 @@ metadata:
   namespace: postgres
   labels:
     service: database
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   selector:
     matchLabels:
@@ -73,6 +77,8 @@ metadata:
   namespace: postgres
   labels:
     service: database
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   selector:
     app: postgres
