add PreSync for nginx and strimzi-operator

--- a/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
@@ -4,9 +4,8 @@ metadata:
   name: app-init
   namespace: consumer
   annotations:
-    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
-    argocd.argoproj.io/sync-wave: "10"
 spec:
   template:
     spec:
