--- a/gitops/control-center/base/app/ingress-nginx.yaml
+++ b/gitops/control-center/base/app/ingress-nginx.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress-nginx
   namespace: argocd
   annotations:
+    argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-10"
 spec:
   project: default
