--- a/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/kafka-cluster.yaml
@@ -7,6 +7,7 @@ metadata:
     strimzi.io/node-pools: "enabled"
     strimzi.io/kraft: "enabled"
     argocd.argoproj.io/sync-wave: "10"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   kafka:
     version: 4.1.1
