--- a/gitops/control-center/overlay/lab-dev-th/kafka/kafka-ui.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/kafka-ui.yaml
@@ -7,6 +7,7 @@ metadata:
     app: kafka-ui
   annotations:
     argocd.argoproj.io/sync-wave: "20"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   replicas: 1
   selector:
