--- a/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
@@ -7,6 +7,7 @@ metadata:
     strimzi.io/cluster: kafka-cluster
   annotations:
     argocd.argoproj.io/sync-wave: "10"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   partitions: 3
   replicas: 1
