--- a/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/kafka/topics.yaml
@@ -19,6 +19,9 @@ metadata:
   namespace: kafka
   labels:
     strimzi.io/cluster: kafka-cluster
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   partitions: 3
   replicas: 1
