--- a/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/consumer/init-job.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/sync-wave: "20"
 spec:
   template:
     spec:
