--- a/gitops/control-center/overlay/lab-dev-th/app/frontend/deployment.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/frontend/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: NEXT_PUBLIC_INTERNAL_BACKEND_API_URI
               value: "http://backend.backend.svc.cluster.local:8080"
             - name: NEXT_PUBLIC_BACKEND_API_URI
-              value: "http://message.localhost"
+              value: "http://message.localhost/api/"
           ports:
             - containerPort: 3000
           livenessProbe:
