add fix ingress path for backend

--- a/gitops/control-center/overlay/lab-dev-th/app/backend/ingress.yaml
+++ b/gitops/control-center/overlay/lab-dev-th/app/backend/ingress.yaml
@@ -18,7 +18,7 @@ spec:
                 name: backend
                 port:
                   number: 8080
-          - path: /event
+          - path: /events
             pathType: Prefix
             backend:
               service:
